<resources>
    <string name="app_name">CarHiboux</string>
    <string name="home">Home</string>
    <string name="profile">My Profile</string>
    <string name="announcements">My Announcements</string>
    <string name="notifications">My Notifications</string>
    <string name="alerts">My Alerts</string>
    <string name="statistics">My Statistics</string>
    <string name="register">Register</string>
    <string name="professional">Professional</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="zip">ZIP</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="particular">Particular</string>
    <string name="name">Name</string>
    <string name="siret">Siret</string>
    <string name="nickname">Nickname</string>
    <string name="civility">Civility</string>
    <string name="last_name">Last Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="first_name">First Name</string>
    <string name="filter">Filter</string>
    <string name="any">Any</string>
    <string name="rent">Rent</string>
    <string name="sell">Sell</string>
    <string name="gasoline">Gasoline</string>
    <string name="diesel">Diesel</string>
    <string name="electric">Electric</string>
    <string name="gas">Gas</string>
    <string name="manual">Manual</string>
    <string name="automatic">Automatic</string>
    <string name="sequential">Sequential</string>
    <string name="has_technical_control">Has Technical Control</string>
    <string name="has_not_technical_control">Has Not Technical Control</string>
    <string name="euro">€</string>
    <string name="euro_per_day">€ /day</string>
    <string name="km">km</string>
    <string name="ch">ch</string>
    <string name="mg">mg</string>
    <string name="consumption_unit">l / 100km</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="announcement_editor">Announcement Editor</string>
    <string name="brand">Brand</string>
    <string name="label_input_separator">:</string>
    <string name="model">Model</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="year">Year</string>
    <string name="kilometers">Kilometers</string>
    <string name="technical_control">Technical Control</string>
    <string name="energy">Energy</string>
    <string name="gearbox">Gearbox</string>
    <string name="exterior_color">Exterior Color</string>
    <string name="interior_color">Interior Color</string>
    <string name="places">Places</string>
    <string name="doors">Doors</string>
    <string name="power">Power</string>
    <string name="power_din">Power DIN</string>
    <string name="co2">Co2</string>
    <string name="consumption">Consumption</string>
    <string name="mister">Mister</string>
    <string name="miss">Miss</string>
    <string name="other">Other</string>
    <string name="to_rent">To Rent</string>
    <string name="validate">Validate</string>
    <string name="former_owner_count">Former Owner Count</string>
    <string name="new_message_received">New Message Received</string>
    <string name="announcement_matching_alert">Announcement Matching Alert</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="chats">My Chats</string>
    <string name="UNSEEN_FIRST">Unseen First</string>
    <string name="RECENT_FIRST">Recent First</string>
    <string name="show_enable_only">Show enable only</string>
    <string name="create_alert">Create Alert</string>
    <string name="alert_icon">Alert icon</string>
    <string name="alert_settings_icon">Alert settings icon</string>
    <string name="announcement_image">Announcement image</string>
    <string name="_0">0</string>
    <string name="announcement_type_icon">Announcement type icon</string>
    <string name="doors_semicolon">Doors :</string>
    <string name="color_icon">Color icon</string>
    <string name="doors_icon">Doors icon</string>
    <string name="co2_icon">CO2 icon</string>
    <string name="energy_icon">Energy icon</string>
    <string name="interior_semicolon">Interior :</string>
    <string name="places_icon">Places icon</string>
    <string name="exterior_semicolon">Exterior :</string>
    <string name="power_din_semicolon">Power DIN :</string>
    <string name="consumption_icon">Consumption icon</string>
    <string name="kilometers_semicolon">Kilometers :</string>
    <string name="power_din_icon">Power DIN icon</string>
    <string name="kilometers_icon">Kilometers icon</string>
    <string name="technical_control_icon">Technical control icon</string>
    <string name="gearbox_icon">Gearbox icon</string>
    <string name="power_semicolon">Power :</string>
    <string name="general_informations">General Informations</string>
    <string name="power_icon">Power icon</string>
    <string name="places_semicolon">Places :</string>
    <string name="year_icon">Year icon</string>
    <string name="announcement_message_access">Announcement message access</string>
    <string name="announcement_edit">Announcement edit</string>
    <string name="filter_icon">Filter icon</string>
    <string name="mark_icon">Mark icon</string>
    <string name="search_hint">Search…</string>
    <string name="search_icon">Search icon</string>
    <string name="add_icon">Add icon</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="location_icon">Location icon</string>
    <string name="to_sell">To Sell</string>
    <string name="write_message_here_hint">Write Message Here…</string>
    <string name="send_icon">Send icon</string>
    <string name="sort_by">Sort by</string>
    <string name="chat_item_icon">Chat item icon</string>
    <string name="announcement_type_semicolon">Announcement Type :</string>
    <string name="brand_semicolon">Brand :</string>
    <string name="model_semicolon">Model :</string>
    <string name="max_price_semicolon">Max Price :</string>
    <string name="min_price_semicolon">Min Price :</string>
    <string name="max_kilometers_semicolon">Max Kilometers :</string>
    <string name="year_semicolon">Year :</string>
    <string name="_1971">1971</string>
    <string name="interval_separator">-</string>
    <string name="must_have_technical_control">Must have Technical Control</string>
    <string name="energy_semicolon">Energy :</string>
    <string name="gearbox_semicolon">Gearbox :</string>
    <string name="min_places_semicolon">Min Places :</string>
    <string name="_1">1</string>
    <string name="connexion">Connection</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_yet_registered_join_us">Not yet registered ? Join Us !</string>
    <string name="mark_all_read_icon">Mark all read icon</string>
    <string name="show_messages">Show Messages</string>
    <string name="show_alerts">Show Alerts</string>
    <string name="notification_icon">Notification icon</string>
    <string name="validate_payment">Validate payment</string>
    <string name="card_number">Card Number</string>
    <string name="payment_details">Payment Details</string>
    <string name="credit_card_null_number">0000 0000 0000 0000</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="credit_card_null_cvv">000</string>
    <string name="cvv">CVV</string>
    <string name="cardholder_s_name">Cardholder\'s Name</string>
    <string name="name_hint">John Doe</string>
    <string name="avatar_image">Avatar image</string>
    <string name="premium_icon">Premium icon</string>
    <string name="siret_icon">Siret icon</string>
    <string name="become_premium">Become Premium</string>
    <string name="already_registered_login_now">Already registered ? Login now</string>
    <string name="clear_search_icon">Clear search icon</string>
    <string name="login_register">Login / Register</string>
    <string name="amount_of_message_by_month">Amount of Message By Month</string>
    <string name="amount_of_announcement_by_type">Amount of Announcement by Type</string>
    <string name="announcement_type">Announcement Type</string>
    <string name="confirm_deletion">Confirm deletion ?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_delete_announcement">Cannot delete announcement</string>
    <string name="cannot_delete_alert">Cannot delete alert</string>
    <string name="delete">Delete</string>
    <string name="delete_icon">Delete icon</string>
    <string name="enhance">Enhance</string>
    <string name="enhance_icon">Enhance icon</string>
    <string name="announcer_information">Announcer Information</string>
    <string name="email_icon">Email icon</string>
    <string name="person_icon">Person icon</string>
    <string name="phone_icon">Phone icon</string>
    <string name="alert_channel_name">CarHiboux Alerts</string>
    <string name="alert_channel_description">Alerts from CarHiboux</string>
    <string name="new_carhiboux_notification">New CarHiboux Notification</string>
    <string name="message_channel_name">CarHiboux Messages</string>
    <string name="message_channel_description">Messages from CarHiboux</string>
    <string name="montant_semicolon">Amount :</string>
</resources>