<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        />

    <item android:id="@+id/login"
        android:title="@string/login_register"
        android:icon="@drawable/ic_baseline_login_24"
        />

    <item android:id="@+id/my_notifications"
        android:title="@string/notifications"
        android:icon="@drawable/ic_baseline_announcement_24"
        />

    <item android:id="@+id/my_announcements"
        android:title="@string/announcements"
        android:icon="@drawable/ic_baseline_dynamic_feed_24"
        />

    <item android:id="@+id/my_chat"
        android:title="@string/chats"
        android:icon="@drawable/ic_baseline_message_24"
        />

    <item android:id="@+id/my_alerts"
        android:title="@string/alerts"
        android:icon="@drawable/ic_baseline_campaign_24"
        />

    <item android:id="@+id/my_statistics"
        android:title="@string/statistics"
        android:icon="@drawable/ic_baseline_analytics_24"
        />

    <item android:id="@+id/my_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_person_24"
        />

    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_baseline_logout_24"
        />
</menu>