<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/announcement_list_search_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/announcement_list_search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/announcement_list_search_button"
        app:srcCompat="@drawable/ic_baseline_filter_alt_24"
        android:contentDescription="@string/filter_icon" />

    <ListView
        android:id="@+id/announcement_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/announcement_list_search" />

    <ImageView
        android:id="@+id/announcement_list_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/announcement_list_search_filter"
        app:layout_constraintTop_toTopOf="@+id/announcement_list_search_filter"
        app:srcCompat="@drawable/ic_baseline_bookmark_24"
        android:contentDescription="@string/mark_icon" />

    <EditText
        android:id="@+id/announcement_list_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/search_hint"
        android:inputType="textAutoCorrect"
        app:layout_constraintEnd_toStartOf="@+id/announcement_list_search_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/announcement_list_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/announcement_list_search"
        app:layout_constraintEnd_toStartOf="@+id/announcement_list_search_filter"
        app:layout_constraintTop_toTopOf="@+id/announcement_list_search"
        app:srcCompat="@drawable/ic_baseline_search_24"
        android:contentDescription="@string/search_icon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/announcement_list_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24"
        android:focusable="true"
        android:contentDescription="@string/add_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>