<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/search_filter_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/search_hint"
        android:inputType="textAutoCorrect"
        app:layout_constraintEnd_toStartOf="@+id/search_filter_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/search_filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/search_filter_field"
        app:layout_constraintEnd_toStartOf="@+id/search_filter_cancel"
        app:layout_constraintTop_toTopOf="@+id/search_filter_field"
        app:srcCompat="@drawable/ic_baseline_search_24"
        android:contentDescription="@string/search_icon" />

    <ImageButton
        android:id="@+id/search_filter_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/search_filter_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_filter_button"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_search_off_24"
        android:contentDescription="@string/clear_search_icon" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/search_filter_container"
        android:name="fr.umontpellier.carhiboux.fragment.filter.FilterFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_filter_field" />

</androidx.constraintlayout.widget.ConstraintLayout>